adapt windows start script parameters to linux start script parameter